<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ProgressBar
        android:id="@+id/ProgressBar_Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        style="@style/ProgressBarTheme"
        />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="50dp"
    android:layout_centerHorizontal="true"
    android:text="@string/login_welcomeString"
    android:textSize="26sp"
    android:textColor="@android:color/holo_orange_dark"
    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_name"
            android:drawableStart="@drawable/ic_action_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:ems="13"
            android:hint="@string/login_name"
            android:inputType="textPersonName"
            style="@style/EditTextTheme"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/editText_surname"
            android:drawableStart="@drawable/ic_action_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:ems="13"
            android:hint="@string/login_surname"
            android:inputType="textPersonName"
            style="@style/EditTextTheme"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/editText_Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_action_phone"
            android:ems="13"
            android:hint="@string/login_phoneNumber"
            android:inputType="phone"
            style="@style/EditTextTheme"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/editText_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_action_email"
            android:ems="13"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            style="@style/EditTextTheme"
            android:textSize="16sp" />

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/holo_orange_dark"
            app:cardCornerRadius="25dp"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/clicked_button"
                    android:layout_centerInParent="true"
                    android:text="@string/login_btnRegisterText"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>