<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editText_LoginPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_action_email"
            android:ems="13"
            android:hint="@string/login_phoneNumber"
            android:inputType="phone"
            android:textSize="16sp" />

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/holo_orange_dark"
            app:cardCornerRadius="25dp"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/clicked_button"
                    android:layout_centerInParent="true"
                    android:text="@string/login_btnLoginText"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
            <TextView
                android:id="@+id/textView_LoginNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_textForRegister"
                android:textSize="16sp"
                android:textStyle="normal"
                android:linksClickable="true"
                android:textColor="@android:color/darker_gray"
                android:background="@drawable/clicked_button"
                android:layout_marginTop="10dp" />

    </LinearLayout>
</RelativeLayout>