<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout_Verify"
    >

    <ProgressBar
        android:id="@+id/ProgressBar_Verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        style="@style/ProgressBarTheme" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/linearLayout"
        android:layout_marginTop="-30dp"
        android:layout_centerInParent="true"
        android:text="@string/confirm_information" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_editTextVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:drawableStart="@drawable/ic_action_ok"
            android:textAlignment="center"
            android:textSize="24sp"
            android:inputType="numberSigned"
            android:hint="@string/confirm_hint" />

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/holo_orange_dark"
            app:cardCornerRadius="25dp"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/user_btnVerify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/clicked_button"
                    android:layout_centerInParent="true"
                    android:text="@string/confirm_btnConfirm"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    android:textAlignment="center"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>